--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html>
+{% extends 'bootstrap/base.html'%}
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!-- Navbar block  --> 
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %} 
 
-    {%if title %}
-    <title> {{title}} </title>
-    {% else %}
-    <title>welcome to the best news Website</title>
-    {% endif %}
-
-</head>
-
-<body>
-    <!-- Content block -->
-
-    {% block content %}
-
-    {% endblock%}
-</body>
-
-</html>
