--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
+
+<!-- Styles block -->
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
 {% block content %}
+
+<div class="container">
+    <form>
+        <input type="text" name="article_query" placeholder="Search for a Articles" class="form-control">
+        <input type="submit"  value="Submit" class="btn btn-default">
+    </form>
+
+</div>
 
 <!--sources section-->
 <h3>News Sources</h3>
