--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -3,22 +3,17 @@
 <h1>NEWS MOTO</h1>
 <ul>
     {% for a_news in news %}
-        <li> {{a_news.id}} </li>
+    <div class="container-fluid">
+        div
         <h2> {{a_news.title}} </h2>
         <h3> {{a_news.author}}</h3>
         <p>{{a_news.description}}</p>
         <a href="">{{news.url}}</a>
-        <img src= {{a_news.urlToImage}}  alt="">
+        <img src={{a_news.urlToImage}} alt="">
+    </div>
     {%endfor%}
 
 
 
 </ul>
-
-
-
-
-
-
 {% endblock %}
-
