--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-dark bg-primary"role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +7,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"> News </a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="/"> News </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
