--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,3 +1,15 @@
 body { 
     background-color: black;
 }
+#home {
+    background-image: url(images/wallhaven-49ldw1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 530px;
+    border-radius: 10px;
+    border: solid 3px rgba(32, 31, 31, 0.801);
+    -moz-box-shadow: 0 0 25px 10px #47e4bb;
+    -webkit-box-shadow: 0 0 25px 10px #47e4bb;
+    box-shadow: 0 0 25px 10px #47e4bb;
+
+}
