--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,18 +1,42 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>NEWS MOTO</h1>
+<style>
+    #home {
+        margin: 20px;
+        border-radius: 10px;
+        border: solid 3px rgba(32, 31, 31, 0.801);
+        -moz-box-shadow: 10px 0 10px 1px #161a19;
+        box-shadow: 10px 0 10px 1px #0d0f0f;
+
+    }
+</style>
 <ul>
     {% for a_news in news %}
-    <div class="container-fluid">
-        div
-        <h2> {{a_news.title}} </h2>
-        <h3> {{a_news.author}}</h3>
-        <p>{{a_news.description}}</p>
-        <a href="">{{news.url}}</a>
-        <img src={{a_news.urlToImage}} alt="">
+    <div class="container" id="home">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h2> {{a_news.title}} </h2>
+            </div>
+            <div class="card-body">
+                <h3> BY {{a_news.author}}</h3>
+                <p>{{a_news.description}}</p>
+            </div>
+            <a href="">{{news.url}}</a>
+            
+        </div>
+        <img src={{a_news.urlToImage}} class="btn btn-info btn-sm" alt="">
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
     {%endfor%}
 
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 </ul>
