--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-dark bg-primary"role="navigation">
+<!-- <div class="navbar navbar-dark bg-primary"role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -15,4 +15,26 @@
             </div>
 
         </div>
+    </div> -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">NEWS MOTO!</a>
+        </div>
+        <div class="collapse navbar-collapse" id="example-navbar-collapse">
+
+            <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">HOME</a></li>
+                    <li class="#"><a href="/news/<id>">NEW</a></li>
+
+                </ul>
+            </ul>
+        </div>
     </div>
+</nav>
