--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -10,6 +10,9 @@
         box-shadow: 10px 0 10px 1px #0d0f0f;
 
     }
+    .panel-heading{
+        margin: 10px;
+    }
 </style>
 <ul>
     {% for a_news in news %}
@@ -18,26 +21,16 @@
             <div class="panel-heading">
                 <h2> {{a_news.title}} </h2>
             </div>
-            <div class="card-body">
-                <h3> BY {{a_news.author}}</h3>
-                <p>{{a_news.description}}</p>
-            </div>
-            <a href="">{{news.url}}</a>
             
         </div>
+                <div class="card-body">
+                    <h3> BY {{a_news.author}}</h3>
+                    <p>{{a_news.description}}</p>
+                </div>
+                <a href="">GO{{news.url}}</a>
         <img src={{a_news.urlToImage}} class="btn btn-info btn-sm" alt="">
-        <br>
-        <br>
-        <br>
-        <br>
+        
     </div>
     {%endfor%}
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-
 </ul>
 {% endblock %}
