deployment to heroku

--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -28,7 +28,7 @@
                     <p>{{a_news.description}}</p>
                 </div>
                 <a href="">GO{{news.url}}</a>
-        <img src={{a_news.urlToImage}} class="btn btn-info btn-sm" alt="">
+        <img src={{a_news.urlToImage}} class="btn btn-info btn-md" alt="">
         
     </div>
     {%endfor%}
