--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,5 +1,5 @@
 body { 
-    background-color: black;
+    background-image: url('https://images.unsplash.com/photo-1547316020-8365dfabe141?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2468&q=80');
 }
 #home {
     background-image: url(images/wallhaven-49ldw1.jpg);
