--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <div class="col-md-4">
 
-        <div class="panel panel-info">
+        <div class="panel panel-info" id="the">
             <div class="panel-heading">
                 <a href="/news/{{source.id}}">{{source.name}}</a>
             </div>
