--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -3,14 +3,27 @@
 <h1>NEWS MOTO</h1>
 <style>
     #home {
-        margin: 20px;
+        margin: 40px;
         border-radius: 10px;
         border: solid 3px rgba(32, 31, 31, 0.801);
         -moz-box-shadow: 10px 0 10px 1px #161a19;
         box-shadow: 10px 0 10px 1px #0d0f0f;
 
     }
-    .panel-heading{
+
+    .panel-heading {
+        margin: 10px;
+    }
+
+    img {
+        padding: 10px;
+        width: 50%;
+        height: auto;
+        border-radius: 10px;
+    }
+
+    a {
+        padding: 10px;
         margin: 10px;
     }
 </style>
@@ -21,14 +34,16 @@
             <div class="panel-heading">
                 <h2> {{a_news.title}} </h2>
             </div>
-            
+
         </div>
-                <div class="card-body">
-                    <h3> BY {{a_news.author}}</h3>
-                    <p>{{a_news.description}}</p>
-                </div>
-                <a href="">GO{{news.url}}</a>
-        <img src={{a_news.urlToImage}} class="btn btn-info btn-md" alt="">
+        <div class="card-body">
+            <h3> BY {{a_news.author}}</h3>
+            <p>{{a_news.description}}</p>
+            <img src={{a_news.urlToImage}} alt="">
+            <br>
+            <a href="{{news.url}}" class="btn btn-info btn-md">Visit</a>
+        </div>
+        <br>
         
     </div>
     {%endfor%}
