added abit of the css on how the articles look

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">HOME</a></li>
-                    <li class="#"><a href="/news/<id>">NEW</a></li>
+                    <li class="active"><a href="/news/<id>">NEW</a></li>
 
                 </ul>
             </ul>
