--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -29,7 +29,7 @@
 </style>
 <ul>
     {% for a_news in news %}
-    <div class="container" id="home">
+    <div class="container-flex" id="home">
         <div class="panel panel-info">
             <div class="panel-heading">
                 <h2> {{a_news.title}} </h2>
